# $Id$
elvidir=$(ELVIDIR)

dist_elvi_SCRIPTS	= \
		  S \
		  W \
		  acronym \
		  ads \
		  amazon \
		  archpkg \
		  archwiki \
		  arxiv \
		  ask \
		  aur \
		  austlii \
		  bing \
		  bbcnews \
		  bookfinder \
		  bugmenot \
		  bugzilla \
		  cia \
		  cisco \
		  cite \
		  cliki \
		  cnn \
		  comlaw \
		  commandlinefu \
		  ctan \
		  currency \
		  cve \
		  debbugs \
		  debcodesearch \
		  debcontents \
		  deblists \
		  deblogs \
		  debpackages \
		  debpkghome \
		  debpts \
		  debsec \
		  debvcsbrowse \
		  debwiki \
		  deja \
		  discogs \
		  dockerhub \
		  duckduckgo \
		  ebay \
		  etym \
		  excite \
		  f5 \
		  foldoc \
		  finkpkg \
		  freebsd \
		  freshmeat \
		  fsfdir \
		  gcache \
		  genbugs \
		  genportage \
		  github \
		  google \
		  gutenberg \
		  imdb \
		  ixquick \
		  jamendo \
		  javasun \
		  jquery \
		  l1sp \
		  lastfm \
		  leodict \
		  macports \
		  mathworld \
		  mdn \
		  musicbrainz \
		  mysqldoc \
		  netbsd \
		  nlab \
		  ntrs \
		  openbsd \
		  oraclesearch \
		  pgdoc \
		  pgpkeys \
		  phpdoc \
		  pin \
		  piratebay \
		  priberam \
		  pubmed \
		  rae \
		  rfc \
		  scholar \
		  scpan \
		  searx \
		  slashdot \
		  slinuxdoc \
		  sourceforge \
		  springer \
		  stack \
		  stockquote \
		  thesaurus \
		  translate \
		  urban \
		  w3css \
		  w3html \
		  w3link \
		  w3rdf \
		  wayback \
		  webster \
		  wikipedia \
		  wiktionary \
		  woffle \
		  wolfram \
		  worldwidescience \
		  yahoo \
		  yahoofinance \
		  yandex \
		  youtube

uninstall-local:
	-rmdir $(DESTDIR)$(PREFIX)/$(ELVIDIR)
