EXTRA_DIST = runtests elviwithouttests README COOKIES W.test S.test			\
		acronym.test ads.test alioth.test amazon.test archpkg.test			\
		archwiki.test arxiv.test ask.test aur.test austlii.test				\
		bbcnews.test bing.test bookfinder.test bugmenot.test				\
		bugzilla.test cia.test cisco.test cite.test cliki.test cnn.test		\
		comlaw.test commandlinefu.test ctan.test currency.test cve.test		\
		debbugs.test debcodesearch.test debcontents.test deblists.test		\
		deblogs.test debpackages.test debpkghome.test debpts.test			\
		debsec.test debvcsbrowse.test debwiki.test deja.test discogs.test	\
		duckduckgo.test ebay.test etym.test excite.test f5.test				\
		finkpkg.test foldoc.test freebsd.test freedb.test freshmeat.test	\
		fsfdir.test gcache.test genbugs.test genportage.test github.test	\
		gmane.test google.test gutenberg.test imdb.test ixquick.test		\
		jamendo.test javasun.test jquery.test lastfm.test leodict.test		\
		l1sp.test lsm.test macports.test mathworld.test mdn.test			\
		mininova.test musicbrainz.test mysqldoc.test netbsd.test			\
		nlab.test ntrs.test openbsd.test oraclesearch.test pgdoc.test		\
		phpdoc.test pin.test piratebay.test pgpkeys.test priberam.test		\
		pubmed.test rae.test rfc.test scholar.test scpan.test searx.test	\
		slashdot.test slinuxdoc.test sourceforge.test springer.test			\
		stack.test stockquote.test thesaurus.test translate.test			\
		urban.test w3css.test w3html.test w3link.test w3rdf.test			\
		wayback.test webster.test wikipedia.test wiktionary.test			\
		wolfram.test woffle.test worldwidescience.test yahoo.test			\
		yandex.test youtube.test

test:
	./runtests
	./elviwithouttests


